--- a/client/src/pages/login.astro
+++ b/client/src/pages/login.astro
@@ -2,19 +2,17 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Register">
-  <h1>Register</h1>
+<Layout title="Login">
+  <h1>Login</h1>
   <form id="form">
     <label for="email">Email</label>
     <input type="email" name="email" id="email" required />
-    <label for="name">Username</label>
-    <input type="text" name="username" id="username" required />
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required />
     <button type="submit">Register</button>
   </form>
 
-  <p>Already have an account? <a href="/login">Login</a></p>
+  <p>Don't have account? <a href="/register">Create Account</a></p>
 
   <style>
     form {
@@ -57,7 +55,7 @@ import Layout from '../layouts/Layout.astro';
       const data = Object.fromEntries(formData.entries());
 
       // send data to server (call the register endpoint)
-      const response = await fetch('/api/register', {
+      const response = await fetch('/api/login', {
         method: 'POST',
         body: JSON.stringify(data),
       });
@@ -66,7 +64,7 @@ import Layout from '../layouts/Layout.astro';
         const responseData = await response.json();
         localStorage.setItem('user', JSON.stringify(responseData.user));
         localStorage.setItem('token', responseData.jwt);
-        Astro.redirect('/');
+        window.location.href = '/';
         // return response.json();
       } else {
         const error = await response.json();
