--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,20 +1,23 @@
 ---
-const { description, title } = Astro.props
+const { description, title } = Astro.props;
+import Navigation from '../components/Navigation.astro';
 ---
+
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-        <meta name="description" content={description} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<main>
-            <section>
-                <slot />
-            </section>
-        </main>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="description" content={description} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Navigation />
+    <main>
+      <section>
+        <slot />
+      </section>
+    </main>
+  </body>
 </html>
