--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 const { description, title } = Astro.props;
+import Footer from '../components/Footer.astro';
 import Navigation from '../components/Navigation.astro';
 ---
 
@@ -10,6 +11,7 @@ import Navigation from '../components/Navigation.astro';
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
+    <link rel="stylesheet" href="/global.css" />
     <title>{title}</title>
   </head>
   <body>
@@ -19,5 +21,6 @@ import Navigation from '../components/Navigation.astro';
         <slot />
       </section>
     </main>
+    <Footer />
   </body>
 </html>
